[package]
name = "jars"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
paste = "1.0"
from_iter = "1.1"
zip = { version = "0.6", features = ["deflate-zlib"], default-features = false }
cafebabe = "0.5"
flate2 = { version = "1.0" }

[features]
# significantly faster, but less portable decompression
cloudflare-zlib = ["flate2/cloudflare_zlib"]
